Grammar pass to ensure correctness of all tutorials

--- a/docs/source/tutorials/circuit_building.ipynb
+++ b/docs/source/tutorials/circuit_building.ipynb
@@ -82,7 +82,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x19a34c08290>"
+       "<drawsvg.drawing.Drawing at 0x26c4f0ef210>"
       ]
      },
      "metadata": {},
@@ -175,7 +175,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x19a32c12fd0>"
+       "<drawsvg.drawing.Drawing at 0x26c4ef398d0>"
       ]
      },
      "metadata": {},
@@ -306,7 +306,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x19a34c17950>"
+       "<drawsvg.drawing.Drawing at 0x26c4f0ef990>"
       ]
      },
      "metadata": {},
@@ -412,7 +412,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x19a34c17c10>"
+       "<drawsvg.drawing.Drawing at 0x26c4f0eed10>"
       ]
      },
      "metadata": {},
@@ -521,7 +521,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x19a34c16ed0>"
+       "<drawsvg.drawing.Drawing at 0x26c4f0efcd0>"
       ]
      },
      "metadata": {},
@@ -690,7 +690,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x19a34c15a90>"
+       "<drawsvg.drawing.Drawing at 0x26c4f10e210>"
       ]
      },
      "metadata": {},
@@ -764,7 +764,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x19a34c1bc10>"
+       "<drawsvg.drawing.Drawing at 0x26c4f105e50>"
       ]
      },
      "metadata": {},
@@ -889,7 +889,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x19a34c1ba10>"
+       "<drawsvg.drawing.Drawing at 0x26c4f107810>"
       ]
      },
      "metadata": {},
@@ -1050,7 +1050,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x19a34c18710>"
+       "<drawsvg.drawing.Drawing at 0x26c4f104cd0>"
       ]
      },
      "metadata": {},
@@ -1214,7 +1214,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x19a34c339d0>"
+       "<drawsvg.drawing.Drawing at 0x26c4f12c750>"
       ]
      },
      "metadata": {},
@@ -1389,7 +1389,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x19a3493f090>"
+       "<drawsvg.drawing.Drawing at 0x26c2aa3e0d0>"
       ]
      },
      "metadata": {},
