--- a/docs/source/tutorials/using_parameters.ipynb
+++ b/docs/source/tutorials/using_parameters.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1d17413fd90>"
+       "<drawsvg.drawing.Drawing at 0x199ef4ddfd0>"
       ]
      },
      "metadata": {},
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,14 +416,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate random unitary to implement\n",
     "target_U = lw.random_unitary(n_modes, seed = 99)\n",
     "\n",
-    "# Set initial values at pi/2\n",
+    "# Set initial values as pi/2\n",
     "init_values = [np.pi/2]*len(pdict)\n",
     "# Retrieve bounds from the parameter dictionary\n",
     "bounds = list(pdict.get_bounds().values())\n",
@@ -438,12 +438,12 @@
    "metadata": {},
    "source": [
     "### Results\n",
-    "Once the optimization is complete we can view the value of the figure of merit after each iteration."
+    "Once the optimization is complete we can view the value of the figure of merit after each iteration. As can be seen, using the fidelity measurement defined above we are able to near perfectly implement the transformation on chip."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1d1743696d0>"
+       "<drawsvg.drawing.Drawing at 0x199ef580f50>"
       ]
      },
      "metadata": {},
@@ -786,12 +786,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And finally, can plot the target and implemented unitary side by side to check they are visually equivalent."
+    "And finally, we can plot the target and implemented unitary side by side to check they are visually equivalent."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
