Updated all notebook figures to have a background

--- a/docs/source/examples/bell_state_generator.ipynb
+++ b/docs/source/examples/bell_state_generator.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,6 +44,7 @@
        "     width=\"1976.0000000000002\" height=\"570.0\" viewBox=\"0 0 3900 1125\">\n",
        "<defs>\n",
        "</defs>\n",
+       "<rect x=\"0\" y=\"0\" width=\"3900\" height=\"1125\" fill=\"white\" stroke=\"none\" />\n",
        "<rect x=\"100\" y=\"25\" width=\"3700\" height=\"1075\" fill=\"none\" stroke=\"black\" />\n",
        "<rect x=\"92\" y=\"124.5\" width=\"8\" height=\"1\" fill=\"black\" />\n",
        "<rect x=\"92\" y=\"249.5\" width=\"8\" height=\"1\" fill=\"black\" />\n",
@@ -359,7 +360,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2a045031190>"
+       "<drawsvg.drawing.Drawing at 0x230c744c850>"
       ]
      },
      "metadata": {},
@@ -416,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
