Extra detail in intro of circuit building

--- a/docs/source/tutorials/circuit_building.ipynb
+++ b/docs/source/tutorials/circuit_building.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Circuit Building\n",
     "\n",
-    "This tutorial demonstrates how circuits can be built up from the set of fundamental components included within Lightworks."
+    "This tutorial demonstrates how circuits can be built up from the set of fundamental components included within Lightworks. It aims to act as a basic reference, with a much more detailed description of each component and functionality included in the SDK Circuit section. "
    ]
   },
   {
