Updated all demo notebooks to ensure results are correct when using random seeding

--- a/docs/source/examples/bell_state_generator.ipynb
+++ b/docs/source/examples/bell_state_generator.ipynb
@@ -360,7 +360,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x230c744c850>"
+       "<drawsvg.drawing.Drawing at 0x1dd21978550>"
       ]
      },
      "metadata": {},
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
