--- a/docs/source/examples/heralded_cnot.ipynb
+++ b/docs/source/examples/heralded_cnot.ipynb
@@ -277,7 +277,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x17e57e80a50>"
+       "<drawsvg.drawing.Drawing at 0x1775d3f3250>"
       ]
      },
      "metadata": {},
