--- a/docs/source/tutorials/circuit_building.ipynb
+++ b/docs/source/tutorials/circuit_building.ipynb
@@ -83,7 +83,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x26ae280f950>"
+       "<drawsvg.drawing.Drawing at 0x26f494f8450>"
       ]
      },
      "metadata": {},
@@ -177,7 +177,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x26ae280d410>"
+       "<drawsvg.drawing.Drawing at 0x26f49348950>"
       ]
      },
      "metadata": {},
@@ -309,7 +309,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x26ae0305e50>"
+       "<drawsvg.drawing.Drawing at 0x26f49503650>"
       ]
      },
      "metadata": {},
@@ -416,7 +416,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x26abe171090>"
+       "<drawsvg.drawing.Drawing at 0x26f494fb310>"
       ]
      },
      "metadata": {},
@@ -526,7 +526,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x26ae2826150>"
+       "<drawsvg.drawing.Drawing at 0x26f494fb250>"
       ]
      },
      "metadata": {},
@@ -696,7 +696,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x26ae28332d0>"
+       "<drawsvg.drawing.Drawing at 0x26f494f9710>"
       ]
      },
      "metadata": {},
@@ -771,7 +771,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x26ae2835990>"
+       "<drawsvg.drawing.Drawing at 0x26f474bbf10>"
       ]
      },
      "metadata": {},
@@ -897,7 +897,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x26ae2837d50>"
+       "<drawsvg.drawing.Drawing at 0x26f49504f10>"
       ]
      },
      "metadata": {},
@@ -1059,7 +1059,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x26ae2848bd0>"
+       "<drawsvg.drawing.Drawing at 0x26f49504dd0>"
       ]
      },
      "metadata": {},
@@ -1224,7 +1224,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x26ae2834ed0>"
+       "<drawsvg.drawing.Drawing at 0x26f49510750>"
       ]
      },
      "metadata": {},
@@ -1400,7 +1400,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x26ae25d0c50>"
+       "<drawsvg.drawing.Drawing at 0x26f494fa190>"
       ]
      },
      "metadata": {},
