--- a/docs/source/tutorials/using_parameters.ipynb
+++ b/docs/source/tutorials/using_parameters.ipynb
@@ -327,7 +327,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x207c17d3610>"
+       "<drawsvg.drawing.Drawing at 0x1f10c803250>"
       ]
      },
      "metadata": {},
@@ -769,7 +769,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x207c17aeb10>"
+       "<drawsvg.drawing.Drawing at 0x1f10c88efd0>"
       ]
      },
      "metadata": {},
