Fixed some formatting issues in qubit sections

--- a/docs/source/tutorials/qubit.ipynb
+++ b/docs/source/tutorials/qubit.ipynb
@@ -597,11 +597,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Three qubit gates\n",
+    "## Three Qubit Gates\n",
     "\n",
     "The Toffoli (CCNOT) & CCZ three qubit gates are also included within Lightworks. Similar to the two qubit gates above these require post-selection on measuring one photon across each of the qubit modes.\n",
     "\n",
-    "In this tutorial we will look at the action of the CNNOT gate, which is created and displayed below."
+    "In this tutorial we will look at the action of the CCNOT gate, which is created and displayed below."
    ]
   },
   {
