Updated all notebooks in documentation

--- a/docs/source/examples/heralded_cnot.ipynb
+++ b/docs/source/examples/heralded_cnot.ipynb
@@ -52,16 +52,16 @@
     "for mode, d in data:\n",
     "    theta, phi1, phi2 = d\n",
     "    if phi1 > 0:\n",
-    "        cnot_circuit.add_ps(mode+1, phi1)\n",
-    "    cnot_circuit.add_bs(mode, reflectivity=np.cos(theta/2)**2, convention = \"H\")\n",
+    "        cnot_circuit.ps(mode+1, phi1)\n",
+    "    cnot_circuit.bs(mode, reflectivity=np.cos(theta/2)**2, convention = \"H\")\n",
     "    if phi2 > 0:\n",
-    "        cnot_circuit.add_ps(mode, phi2)\n",
+    "        cnot_circuit.ps(mode, phi2)\n",
     "        \n",
     "# Add the required heralds to the circuit on the ancillary modes.\n",
-    "cnot_circuit.add_herald(0, 0)\n",
-    "cnot_circuit.add_herald(1, 1)\n",
-    "cnot_circuit.add_herald(1, 6)\n",
-    "cnot_circuit.add_herald(0, 7)"
+    "cnot_circuit.herald(0, 0)\n",
+    "cnot_circuit.herald(1, 1)\n",
+    "cnot_circuit.herald(1, 6)\n",
+    "cnot_circuit.herald(0, 7)"
    ]
   },
   {
@@ -277,7 +277,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x28d921eead0>"
+       "<drawsvg.drawing.Drawing at 0x1e6a8d28810>"
       ]
      },
      "metadata": {},
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
