--- a/docs/source/tutorials/circuit_building.ipynb
+++ b/docs/source/tutorials/circuit_building.ipynb
@@ -83,7 +83,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1f30de14590>"
+       "<drawsvg.drawing.Drawing at 0x1624e878c10>"
       ]
      },
      "metadata": {},
@@ -94,12 +94,12 @@
     "circuit = lw.Circuit(4)\n",
     "\n",
     "# Beam splitters \n",
-    "circuit.add_bs(0)\n",
-    "circuit.add_bs(2)\n",
+    "circuit.bs(0)\n",
+    "circuit.bs(2)\n",
     "\n",
     "# Phase shifters\n",
-    "circuit.add_ps(1, 1)\n",
-    "circuit.add_ps(3, np.pi)\n",
+    "circuit.ps(1, 1)\n",
+    "circuit.ps(3, np.pi)\n",
     "\n",
     "circuit.display()"
    ]
@@ -177,7 +177,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1f3694de8d0>"
+       "<drawsvg.drawing.Drawing at 0x1622a02d790>"
       ]
      },
      "metadata": {},
@@ -187,7 +187,7 @@
    "source": [
     "# Map mode 0 -> 2, 2 -> 3 & 3 -> 0\n",
     "\n",
-    "circuit.add_mode_swaps({0:2, 2:3, 3:0})\n",
+    "circuit.mode_swaps({0:2, 2:3, 3:0})\n",
     "\n",
     "circuit.display()"
    ]
@@ -208,10 +208,10 @@
    "outputs": [],
    "source": [
     "# Add loss through beam splitter\n",
-    "circuit.add_bs(1, loss = 2)\n",
+    "circuit.bs(1, loss = 2)\n",
     "\n",
     "# Add directly\n",
-    "circuit.add_loss(0, 0.3)"
+    "circuit.loss(0, 0.3)"
    ]
   },
   {
@@ -309,7 +309,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1f30dbd62d0>"
+       "<drawsvg.drawing.Drawing at 0x1624e879a10>"
       ]
      },
      "metadata": {},
@@ -416,7 +416,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1f30dd4db10>"
+       "<drawsvg.drawing.Drawing at 0x1624e894f90>"
       ]
      },
      "metadata": {},
@@ -426,8 +426,8 @@
    "source": [
     "ref = lw.Parameter(0.2)\n",
     "\n",
-    "circuit.add_bs(0, reflectivity = ref)\n",
-    "circuit.add_bs(2, reflectivity = ref)\n",
+    "circuit.bs(0, reflectivity = ref)\n",
+    "circuit.bs(2, reflectivity = ref)\n",
     "\n",
     "circuit.display()"
    ]
@@ -526,7 +526,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1f30de27c90>"
+       "<drawsvg.drawing.Drawing at 0x1624e879a10>"
       ]
      },
      "metadata": {},
@@ -696,7 +696,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1f30dbd62d0>"
+       "<drawsvg.drawing.Drawing at 0x1624e897250>"
       ]
      },
      "metadata": {},
@@ -771,7 +771,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1f30dbd62d0>"
+       "<drawsvg.drawing.Drawing at 0x1624e878210>"
       ]
      },
      "metadata": {},
@@ -897,7 +897,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1f30de252d0>"
+       "<drawsvg.drawing.Drawing at 0x1624e892790>"
       ]
      },
      "metadata": {},
@@ -908,10 +908,10 @@
     "# Define a smaller circuit and add to mode 1 of the original circuit\n",
     "\n",
     "circuit2 = lw.Circuit(3)\n",
-    "circuit2.add_bs(1)\n",
-    "circuit2.add_ps(1, 0.6)\n",
-    "circuit2.add_bs(1)\n",
-    "circuit2.add_mode_swaps({0:1, 1:2, 2:0})\n",
+    "circuit2.bs(1)\n",
+    "circuit2.ps(1, 0.6)\n",
+    "circuit2.bs(1)\n",
+    "circuit2.mode_swaps({0:1, 1:2, 2:0})\n",
     "\n",
     "print(\"Sub-circuit:\")\n",
     "circuit2.display()\n",
@@ -1059,7 +1059,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1f30de329d0>"
+       "<drawsvg.drawing.Drawing at 0x1624e879210>"
       ]
      },
      "metadata": {},
@@ -1067,7 +1067,7 @@
     }
    ],
    "source": [
-    "circuit.add_herald(0, 2, 0)\n",
+    "circuit.herald(0, 2, 0)\n",
     "\n",
     "circuit.display()"
    ]
@@ -1224,7 +1224,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1f30de26690>"
+       "<drawsvg.drawing.Drawing at 0x1624e8b12d0>"
       ]
      },
      "metadata": {},
@@ -1232,7 +1232,7 @@
     }
    ],
    "source": [
-    "circuit2.add_herald(0, 1, 1)\n",
+    "circuit2.herald(0, 1, 1)\n",
     "\n",
     "circuit.add(circuit2, 2)\n",
     "circuit.display()"
@@ -1400,7 +1400,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1f30de33f50>"
+       "<drawsvg.drawing.Drawing at 0x1624e78fd90>"
       ]
      },
      "metadata": {},
