--- a/docs/source/tutorials/circuit_building.ipynb
+++ b/docs/source/tutorials/circuit_building.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1624e878c10>"
+       "<drawsvg.drawing.Drawing at 0x244c95e8190>"
       ]
      },
      "metadata": {},
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1622a02d790>"
+       "<drawsvg.drawing.Drawing at 0x244c95f2510>"
       ]
      },
      "metadata": {},
@@ -198,17 +198,17 @@
    "source": [
     "## Loss\n",
     "\n",
-    "When simulating, loss can be introduced to each of the circuit modes, either alongside components or directly."
+    "When simulating, loss can be introduced to each of the circuit modes, either alongside components or directly. The loss value should be given as a decimal value."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add loss through beam splitter\n",
-    "circuit.bs(1, loss = 2)\n",
+    "circuit.bs(1, loss = 0.1)\n",
     "\n",
     "# Add directly\n",
     "circuit.loss(0, 0.3)"
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -292,24 +292,24 @@
        "<rect x=\"759.95\" y=\"246.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
        "<rect x=\"810.0\" y=\"225.0\" width=\"50\" height=\"50\" fill=\"grey\" stroke=\"black\" rx=\"5\" ry=\"5\" />\n",
        "<text x=\"835.0\" y=\"252\" font-size=\"25\" fill=\"white\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 835.0, 252)\">L</text>\n",
-       "<text x=\"835.0\" y=\"300\" font-size=\"18\" fill=\"black\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 835.0, 300)\">loss = 2 dB</text>\n",
+       "<text x=\"835.0\" y=\"300\" font-size=\"18\" fill=\"black\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 835.0, 300)\">loss = 0.1</text>\n",
        "<rect x=\"859.95\" y=\"246.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
        "<rect x=\"759.95\" y=\"371.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
        "<rect x=\"810.0\" y=\"350.0\" width=\"50\" height=\"50\" fill=\"grey\" stroke=\"black\" rx=\"5\" ry=\"5\" />\n",
        "<text x=\"835.0\" y=\"377\" font-size=\"25\" fill=\"white\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 835.0, 377)\">L</text>\n",
-       "<text x=\"835.0\" y=\"425\" font-size=\"18\" fill=\"black\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 835.0, 425)\">loss = 2 dB</text>\n",
+       "<text x=\"835.0\" y=\"425\" font-size=\"18\" fill=\"black\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 835.0, 425)\">loss = 0.1</text>\n",
        "<rect x=\"859.95\" y=\"371.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
        "<rect x=\"609.95\" y=\"121.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
        "<rect x=\"660.0\" y=\"100.0\" width=\"50\" height=\"50\" fill=\"grey\" stroke=\"black\" rx=\"5\" ry=\"5\" />\n",
        "<text x=\"685.0\" y=\"127\" font-size=\"25\" fill=\"white\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 685.0, 127)\">L</text>\n",
-       "<text x=\"685.0\" y=\"175\" font-size=\"18\" fill=\"black\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 685.0, 175)\">loss = 0.3 dB</text>\n",
+       "<text x=\"685.0\" y=\"175\" font-size=\"18\" fill=\"black\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 685.0, 175)\">loss = 0.3</text>\n",
        "<rect x=\"709.95\" y=\"121.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
        "<rect x=\"759.95\" y=\"121.0\" width=\"150.1\" height=\"8\" fill=\"black\" />\n",
        "<rect x=\"609.95\" y=\"496.0\" width=\"300.1\" height=\"8\" fill=\"black\" />\n",
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1624e879a10>"
+       "<drawsvg.drawing.Drawing at 0x244c6987710>"
       ]
      },
      "metadata": {},
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1624e894f90>"
+       "<drawsvg.drawing.Drawing at 0x244a2c13a10>"
       ]
      },
      "metadata": {},
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1624e879a10>"
+       "<drawsvg.drawing.Drawing at 0x244c95f2c90>"
       ]
      },
      "metadata": {},
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1624e897250>"
+       "<drawsvg.drawing.Drawing at 0x244c95db950>"
       ]
      },
      "metadata": {},
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1624e878210>"
+       "<drawsvg.drawing.Drawing at 0x244c95e8dd0>"
       ]
      },
      "metadata": {},
@@ -897,7 +897,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1624e892790>"
+       "<drawsvg.drawing.Drawing at 0x244c6f09750>"
       ]
      },
      "metadata": {},
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +940,7 @@
       "image/svg+xml": [
        "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n",
-       "     width=\"868.0\" height=\"310.0\" viewBox=\"0 0 1750.0 625\">\n",
+       "     width=\"686.0\" height=\"245.0\" viewBox=\"0 0 1750.0 625\">\n",
        "<defs>\n",
        "</defs>\n",
        "<rect x=\"0\" y=\"0\" width=\"1750.0\" height=\"625\" fill=\"white\" stroke=\"none\" />\n",
@@ -1059,7 +1059,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1624e879210>"
+       "<drawsvg.drawing.Drawing at 0x244c95f0e50>"
       ]
      },
      "metadata": {},
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1091,7 @@
       "image/svg+xml": [
        "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n",
-       "     width=\"996.7692307692308\" height=\"310.0\" viewBox=\"0 0 2090.0 650\">\n",
+       "     width=\"871.3692307692307\" height=\"271.0\" viewBox=\"0 0 2090.0 650\">\n",
        "<defs>\n",
        "</defs>\n",
        "<rect x=\"0\" y=\"0\" width=\"2090.0\" height=\"650\" fill=\"white\" stroke=\"none\" />\n",
@@ -1224,7 +1224,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1624e8b12d0>"
+       "<drawsvg.drawing.Drawing at 0x244c95f2090>"
       ]
      },
      "metadata": {},
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1258,7 @@
       "image/svg+xml": [
        "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n",
-       "     width=\"1092.1538461538462\" height=\"310.0\" viewBox=\"0 0 2290.0 650\">\n",
+       "     width=\"954.7538461538461\" height=\"271.0\" viewBox=\"0 0 2290.0 650\">\n",
        "<defs>\n",
        "</defs>\n",
        "<rect x=\"0\" y=\"0\" width=\"2290.0\" height=\"650\" fill=\"white\" stroke=\"none\" />\n",
@@ -1400,7 +1400,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1624e78fd90>"
+       "<drawsvg.drawing.Drawing at 0x244c95cf450>"
       ]
      },
      "metadata": {},
