Additional headings in interferometers tutorial

--- a/docs/source/interferometers/tutorial.ipynb
+++ b/docs/source/interferometers/tutorial.ipynb
@@ -23,6 +23,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Configuration\n",
+    "\n",
     "First, the test circuit is defined. In this case a hadamard and CNOT gate is used to create the $\\ket{00}$ + $\\ket{11}$ bell state from the input $\\ket{00}$."
    ]
   },
@@ -626,6 +628,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Simulation\n",
+    "\n",
     "This circuit can then be simulated to verify correct functionality using the Sampler. The required post-selection of 1 photon across each set of dual-rail encoded modes is configured, and a total of 10000 samples are drawn from the system."
    ]
   },
