Missing description in index for tomography + small corrections in notebook

--- a/docs/source/tomography/state_tomography.ipynb
+++ b/docs/source/tomography/state_tomography.ipynb
@@ -66,7 +66,10 @@
    "metadata": {},
    "source": [
     "## Single Qubit\n",
-    "First, single qubit states are examined, starting with $\\ket{0}$. This is created by using an identity gate circuit and a photonic input state of $\\ket{10}$. The circuit defined below acts as a base circuit to use with the StateTomography, which is then modified as part of the algorithm."
+    "First, single qubit states are examined, starting with $\\ket{0}$. This is created by using an identity gate circuit and a photonic input state of $\\ket{10}$. The circuit defined below acts as a base circuit to use with the StateTomography, which is then modified as part of the algorithm.\n",
+    "\n",
+    "..note::\n",
+    "    The input state is defined later on in the experiment function below."
    ]
   },
   {
@@ -170,7 +173,7 @@
     "\n",
     "$\\begin{equation}\\rho = \\begin{matrix} 1 & 0\\\\ 0 & 0 \\end{matrix}\\end{equation}$\n",
     "\n",
-    "which is as expected using\n",
+    "which is as expected using the equation\n",
     "\n",
     "$\\begin{equation}\\rho = \\ket{\\Psi}\\bra{\\Psi} = \\ket{0}\\bra{0} \\end{equation}$"
    ]
@@ -201,7 +204,7 @@
    "metadata": {},
    "source": [
     "### $\\ket{+}$ tomography\n",
-    "Tomography of the $\\ket{+}$ state is also possible, through creation of this with a hadamard gate. Note that this is possible as the experiment_1q function uses the input $\\ket{0}$."
+    "Next we can perform tomography of the $\\ket{+}$ state, through creation of this with a hadamard gate. This is the case as the experiment_1q function uses the input $\\ket{0}$."
    ]
   },
   {
