--- a/docs/source/tomography/state_tomography.ipynb
+++ b/docs/source/tomography/state_tomography.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x21470104750>"
+       "<drawsvg.drawing.Drawing at 0x21470fec150>"
       ]
      },
      "metadata": {},
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x21470227510>"
+       "<drawsvg.drawing.Drawing at 0x2146f7cd550>"
       ]
      },
      "metadata": {},
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2147050d510>"
+       "<drawsvg.drawing.Drawing at 0x21470c57ad0>"
       ]
      },
      "metadata": {},
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,6 +410,8 @@
     "        \n",
     "        self.n_qubits = n_qubits\n",
     "        self.source = source\n",
+    "        self.n_samples = 10000\n",
+    "        self.random_seed = 22\n",
     "\n",
     "    def experiment(self, circuits: list[lw.Circuit]) -> list:\n",
     "        \"\"\"\n",
@@ -429,7 +431,7 @@
     "                circ, lw.State([1,0]*self.n_qubits), source=self.source\n",
     "            )\n",
     "            results.append(sampler.sample_N_outputs(\n",
-    "                10000, seed=22, post_select=post_select)\n",
+    "                self.n_samples, seed=self.random_seed, post_select=post_select)\n",
     "            )\n",
     "        return results"
    ]
@@ -443,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
