Updated intro + fixed note

--- a/docs/source/tomography/state_tomography.ipynb
+++ b/docs/source/tomography/state_tomography.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# State Tomography\n",
-    "Through state tomography, it is possible to find the density matrix of a quantum state produced by a system. The StateTomography object allows for semi-automation of this process. "
+    "This notebook demonstates utilisation of the StateTomography object. This enables automation of the process for calculating the denisty matrix from a quantum state created by a circuit."
    ]
   },
   {
@@ -73,8 +73,8 @@
     "## Single Qubit\n",
     "First, single qubit states are examined, starting with $\\ket{0}$. This is created by using an identity gate circuit and a photonic input state of $\\ket{10}$. The circuit defined below acts as a base circuit to use with the StateTomography, which is then modified as part of the algorithm.\n",
     "\n",
-    "..note::\n",
-    "    The input state is defined later on in the experiment function below."
+    ".. note::\n",
+    "    The input state is defined later on, in the experiment function below."
    ]
   },
   {
