Added initial process tomography notebook

--- a/docs/source/tomography/state_tomography.ipynb
+++ b/docs/source/tomography/state_tomography.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "# State Tomography\n",
-    "This notebook demonstates utilisation of the StateTomography object. This enables automation of the process for calculating the denisty matrix from a quantum state created by a circuit."
+    "State tomography allows for analysis of the quantum state produced by a particular quantum process, through measurement of the density matrix of the state.\n",
+    "\n",
+    "This notebook demonstates utilisation of the StateTomography object, which enables automation of the process, requiring only an experiment function to be provided which can be used for collecting the data."
    ]
   },
   {
